@@ -16,6 +16,7 @@ NEXT UNRELEASED
 - Fix PDF example.properties template. BZ #999586
 - Fix PUG PDF format for OpenSuse. BZ #999581
 - Simplify highlight error message. BZ #987059
+- Add css styles for table sizes. BZ #1005640
 
 3.2.1 Wed Sep 04 2013
 - Fix empty images dir causing packaging fail. BZ #995896
